Fixed quote styles on mobile.

--- a/src/VenueInfo/VenueInfo.module.scss
+++ b/src/VenueInfo/VenueInfo.module.scss
@@ -12,10 +12,6 @@
   text-align: center;
 }
 
-.quote {
-  @extend .quote;
-}
-
 .sourceLink {
   display: block;
   text-align: right;
