--- a/src/index.scss
+++ b/src/index.scss
@@ -36,14 +36,6 @@ a {
   position: relative;
 }
 
-// Quote styles.
-.quote {
-  border-left: 2px solid #eee;
-  font-style: italic;
-  margin: 0 16px;
-  padding: 0 16px;
-}
-
 @media #{$screen-mobile} {
   .sectionMargins {
     margin: 16px;
